# NU-Engine

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  build.rs
api_macros/: Cargo.toml
api_macros/src/: lib.rs
docs/: API_MAP.md  COMPONENT_SYSTEMS.md  ENGINE_ARCHITECTURE.md  EVENT_SYSTEMS.md  FFI_USAGE.md  RENDERER_INTERNALS.md  RENDERING_PIPELINE.md  RESOURCE_MANAGEMENT.md  SPINNING_CUBE_SHOWCASE.md
examples/: editor_app.rs  physics_demo.rs  scene_editor.rs  spinning_block_demo.rs  square_demo.rs
examples/cpp/: README.md  build_minecraft_block.ps1  minecraft_block.cpp  minecraft_block.rc  nu.dll.lib  nu_gl_scratch.hpp  run_out.txt  run_stdout.txt
include/: nu_ffi.h
scenes/: explicit_template.nuscene
scripts/: player_controller.cpp  player_controller.na
shaders/: cube_3d.frag  cube_3d.vert  primitive_2d.frag  primitive_2d.vert  shadow_3d.vert  square.frag  square.vert  text_2d.frag  text_2d.vert
src/: lib.rs
src/app/: mod.rs
src/backend/: mod.rs
src/core/: config.rs  context.rs  error.rs  mod.rs
src/demo/: block.rs  mod.rs  physics.rs  square.rs
src/editor/: mod.rs  ui.rs
src/engine/: mod.rs  world.rs
src/event/: mod.rs
src/executor/: mod.rs
src/ffi/: mod.rs
src/graphics/: mod.rs
src/lighting/: mod.rs
src/physics/: mod.rs
src/pipeline/: descriptor.rs  material.rs  mod.rs
src/renderer/: frame.rs  mod.rs  three_d.rs  two_d.rs
src/resource/: asset.rs  buffer.rs  image.rs  mod.rs
src/rhi/: mod.rs  vulkan.rs
src/runtime/: mod.rs
src/scene/: mod.rs  primitives.rs  (+1 more)
(+2 files in other folders)
